@@ -1,6 +1,7 @@
 Revision history for LWP-ConsoleLogger
 
 {{$NEXT}}
+    - Document header and parameter redaction
 
 0.000029  2016-09-13 10:37:57-04:00 America/Toronto
     - Stop setting default headers via debug_ua()
